@@ -19,6 +19,7 @@ package com.facebook.buck.android;
 import static com.google.common.collect.Ordering.natural;
 
 import com.facebook.buck.android.aapt.RDotTxtEntry;
+import com.facebook.buck.android.aapt.RDotTxtEntry.IdType;
 import com.facebook.buck.android.aapt.RDotTxtEntry.RType;
 import com.facebook.buck.io.ProjectFilesystem;
 import com.facebook.buck.log.Logger;
@@ -27,6 +28,7 @@ import com.facebook.buck.rules.SourcePathResolver;
 import com.facebook.buck.step.ExecutionContext;
 import com.facebook.buck.step.Step;
 import com.facebook.buck.step.StepExecutionResult;
+import com.facebook.buck.util.ThrowingPrintWriter;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Joiner;
 import com.google.common.base.Preconditions;
@@ -39,18 +41,20 @@ import com.google.common.collect.ImmutableSortedSet;
 import com.google.common.collect.Sets;
 import com.google.common.collect.SortedSetMultimap;
 import com.google.common.collect.TreeMultimap;
-
 import java.io.IOException;
-import java.io.PrintWriter;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumSet;
+import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 public class MergeAndroidResourcesStep implements Step {
   private static final Logger LOG = Logger.get(MergeAndroidResourcesStep.class);
@@ -64,12 +68,13 @@ public class MergeAndroidResourcesStep implements Step {
   private final EnumSet<RType> bannedDuplicateResourceTypes;
   private final Optional<String> unionPackage;
   private final String rName;
+  private final boolean useOldStyleableFormat;
 
   /**
-   * Merges text symbols files from {@code aapt} for each of the input {@code android_resource}
-   * into a set of resources per R.java package and writes an {@code R.java} file per package under
-   * the output directory. Also, if {@code uberRDotTxt} is present, the IDs in the output
-   * {@code R.java} file will be taken from the {@code R.txt} file.
+   * Merges text symbols files from {@code aapt} for each of the input {@code android_resource} into
+   * a set of resources per R.java package and writes an {@code R.java} file per package under the
+   * output directory. Also, if {@code uberRDotTxt} is present, the IDs in the output {@code R.java}
+   * file will be taken from the {@code R.txt} file.
    */
   @VisibleForTesting
   MergeAndroidResourcesStep(
@@ -81,7 +86,8 @@ public class MergeAndroidResourcesStep implements Step {
       boolean forceFinalResourceIds,
       EnumSet<RType> bannedDuplicateResourceTypes,
       Optional<String> unionPackage,
-      Optional<String> rName) {
+      Optional<String> rName,
+      boolean useOldStyleableFormat) {
     this.filesystem = filesystem;
     this.pathResolver = pathResolver;
     this.androidResourceDeps = ImmutableList.copyOf(androidResourceDeps);
@@ -91,6 +97,7 @@ public class MergeAndroidResourcesStep implements Step {
     this.bannedDuplicateResourceTypes = bannedDuplicateResourceTypes;
     this.unionPackage = unionPackage;
     this.rName = rName.orElse("R");
+    this.useOldStyleableFormat = useOldStyleableFormat;
   }
 
   public static MergeAndroidResourcesStep createStepForDummyRDotJava(
@@ -100,7 +107,8 @@ public class MergeAndroidResourcesStep implements Step {
       Path outputDir,
       boolean forceFinalResourceIds,
       Optional<String> unionPackage,
-      Optional<String> rName) {
+      Optional<String> rName,
+      boolean useOldStyleableFormat) {
     return new MergeAndroidResourcesStep(
         filesystem,
         pathResolver,
@@ -110,7 +118,8 @@ public class MergeAndroidResourcesStep implements Step {
         forceFinalResourceIds,
         /* bannedDuplicateResourceTypes */ EnumSet.noneOf(RType.class),
         unionPackage,
-        rName);
+        rName,
+        useOldStyleableFormat);
   }
 
   public static MergeAndroidResourcesStep createStepForUberRDotJava(
@@ -130,15 +139,14 @@ public class MergeAndroidResourcesStep implements Step {
         /* forceFinalResourceIds */ true,
         bannedDuplicateResourceTypes,
         unionPackage,
-        /* rName */ Optional.empty());
+        /* rName */ Optional.empty(),
+        false);
   }
 
   public ImmutableSortedSet<Path> getRDotJavaFiles() {
     return FluentIterable.from(androidResourceDeps)
         .transform(HasAndroidResourceDeps::getRDotJavaPackage)
-        .append(unionPackage
-            .map(Collections::singletonList)
-            .orElse(Collections.emptyList()))
+        .append(unionPackage.map(Collections::singletonList).orElse(Collections.emptyList()))
         .transform(this::getPathToRDotJava)
         .toSortedSet(natural());
   }
@@ -174,34 +182,32 @@ public class MergeAndroidResourcesStep implements Step {
     ImmutableMap.Builder<Path, HasAndroidResourceDeps> symbolsFileToResourceDeps =
         ImmutableMap.builder();
     for (HasAndroidResourceDeps res : androidResourceDeps) {
-      // TODO(shs96c): These have to be absolute for this all to work with multi-repo.
-      // This is because each `androidResourceDeps` might be from a different repo, so we can't
-      // assume that they exist in the calling rule's projectfilesystem.
-      Path rDotTxtPath = pathResolver.getRelativePath(res.getPathToTextSymbolsFile());
-      rDotTxtToPackage.put(
-          rDotTxtPath,
-          res.getRDotJavaPackage());
+      Path rDotTxtPath =
+          filesystem.relativize(pathResolver.getAbsolutePath(res.getPathToTextSymbolsFile()));
+      rDotTxtToPackage.put(rDotTxtPath, res.getRDotJavaPackage());
       symbolsFileToResourceDeps.put(rDotTxtPath, res);
     }
     Optional<ImmutableMap<RDotTxtEntry, String>> uberRDotTxtIds;
     if (uberRDotTxt.isPresent()) {
       // re-assign Ids
-      uberRDotTxtIds = Optional.of(FluentIterable.from(
-          RDotTxtEntry.readResources(filesystem, uberRDotTxt.get()))
-          .toMap(
-              input -> input.idValue));
+      uberRDotTxtIds =
+          Optional.of(
+              FluentIterable.from(RDotTxtEntry.readResources(filesystem, uberRDotTxt.get()))
+                  .toMap(input -> input.idValue));
     } else {
       uberRDotTxtIds = Optional.empty();
     }
 
     ImmutableMap<Path, String> symbolsFileToRDotJavaPackage = rDotTxtToPackage.build();
 
-    SortedSetMultimap<String, RDotTxtEntry> rDotJavaPackageToResources = sortSymbols(
-        symbolsFileToRDotJavaPackage,
-        uberRDotTxtIds,
-        symbolsFileToResourceDeps.build(),
-        bannedDuplicateResourceTypes,
-        filesystem);
+    SortedSetMultimap<String, RDotTxtEntry> rDotJavaPackageToResources =
+        sortSymbols(
+            symbolsFileToRDotJavaPackage,
+            uberRDotTxtIds,
+            symbolsFileToResourceDeps.build(),
+            bannedDuplicateResourceTypes,
+            filesystem,
+            useOldStyleableFormat);
 
     // If a resource_union_package was specified, copy all resource into that package,
     // unless they are already present.
@@ -218,9 +224,10 @@ public class MergeAndroidResourcesStep implements Step {
     }
 
     writePerPackageRDotJava(rDotJavaPackageToResources, filesystem);
-    Set<String> emptyPackages = Sets.difference(
-        ImmutableSet.copyOf(symbolsFileToRDotJavaPackage.values()),
-        rDotJavaPackageToResources.keySet());
+    Set<String> emptyPackages =
+        Sets.difference(
+            ImmutableSet.copyOf(symbolsFileToRDotJavaPackage.values()),
+            rDotJavaPackageToResources.keySet());
 
     if (!emptyPackages.isEmpty()) {
       writeEmptyRDotJavaForPackages(emptyPackages, filesystem);
@@ -228,8 +235,7 @@ public class MergeAndroidResourcesStep implements Step {
   }
 
   private void writeEmptyRDotJavaForPackages(
-      Set<String> rDotJavaPackages,
-      ProjectFilesystem filesystem) throws IOException {
+      Set<String> rDotJavaPackages, ProjectFilesystem filesystem) throws IOException {
     for (String rDotJavaPackage : rDotJavaPackages) {
       Path outputFile = getPathToRDotJava(rDotJavaPackage);
       filesystem.mkdirs(outputFile.getParent());
@@ -240,21 +246,22 @@ public class MergeAndroidResourcesStep implements Step {
 
   @VisibleForTesting
   void writePerPackageRDotJava(
-      SortedSetMultimap<String, RDotTxtEntry> packageToResources,
-      ProjectFilesystem filesystem) throws IOException {
+      SortedSetMultimap<String, RDotTxtEntry> packageToResources, ProjectFilesystem filesystem)
+      throws IOException {
     for (String rDotJavaPackage : packageToResources.keySet()) {
       Path outputFile = getPathToRDotJava(rDotJavaPackage);
       filesystem.mkdirs(outputFile.getParent());
-      try (PrintWriter writer = new PrintWriter(filesystem.newFileOutputStream(outputFile))) {
+      try (ThrowingPrintWriter writer =
+          new ThrowingPrintWriter(filesystem.newFileOutputStream(outputFile))) {
         writer.format("package %s;\n\n", rDotJavaPackage);
         writer.format("public class %s {\n", rName);
 
         ImmutableList.Builder<String> customDrawablesBuilder = ImmutableList.builder();
         ImmutableList.Builder<String> grayscaleImagesBuilder = ImmutableList.builder();
-        RDotTxtEntry.RType lastType = null;
+        RType lastType = null;
 
         for (RDotTxtEntry res : packageToResources.get(rDotJavaPackage)) {
-          RDotTxtEntry.RType type = res.type;
+          RType type = res.type;
           if (!type.equals(lastType)) {
             // If the previous type needs to be closed, close it.
             if (lastType != null) {
@@ -270,16 +277,12 @@ public class MergeAndroidResourcesStep implements Step {
           // Write as an int.
           writer.format(
               "    public static%s%s %s=%s;\n",
-              forceFinalResourceIds ? " final " : " ",
-              res.idType,
-              res.name,
-              res.idValue);
+              forceFinalResourceIds ? " final " : " ", res.idType, res.name, res.idValue);
 
-          if (type == RDotTxtEntry.RType.DRAWABLE &&
-              res.customType == RDotTxtEntry.CustomDrawableType.CUSTOM) {
+          if (type == RType.DRAWABLE && res.customType == RDotTxtEntry.CustomDrawableType.CUSTOM) {
             customDrawablesBuilder.add(res.idValue);
-          } else if (type == RDotTxtEntry.RType.DRAWABLE &&
-              res.customType == RDotTxtEntry.CustomDrawableType.GRAYSCALE_IMAGE) {
+          } else if (type == RType.DRAWABLE
+              && res.customType == RDotTxtEntry.CustomDrawableType.GRAYSCALE_IMAGE) {
             grayscaleImagesBuilder.add(res.idValue);
           }
         }
@@ -318,7 +321,9 @@ public class MergeAndroidResourcesStep implements Step {
       Optional<ImmutableMap<RDotTxtEntry, String>> uberRDotTxtIds,
       ImmutableMap<Path, HasAndroidResourceDeps> symbolsFileToResourceDeps,
       EnumSet<RType> bannedDuplicateResourceTypes,
-      ProjectFilesystem filesystem) throws DuplicateResourceException {
+      ProjectFilesystem filesystem,
+      boolean useOldStyleableFormat)
+      throws DuplicateResourceException {
     // If we're reenumerating, start at 0x7f01001 so that the resulting file is human readable.
     // This value range (0x7f010001 - ...) is easier to spot as an actual resource id instead of
     // other values in styleable which can be enumerated integers starting at 0.
@@ -333,29 +338,29 @@ public class MergeAndroidResourcesStep implements Step {
     SortedSetMultimap<String, RDotTxtEntry> rDotJavaPackageToSymbolsFiles = TreeMultimap.create();
     SortedSetMultimap<RDotTxtEntry, Path> bannedDuplicateResourceToSymbolsFiles =
         TreeMultimap.create();
+
+    HashMap<RDotTxtEntry, RDotTxtEntry> resourceToIdValuesMap = new HashMap<>();
+
     for (Map.Entry<Path, String> entry : symbolsFileToRDotJavaPackage.entrySet()) {
       Path symbolsFile = entry.getKey();
       // Read the symbols file and parse each line as a Resource.
       List<String> linesInSymbolsFile;
       try {
         linesInSymbolsFile =
-            FluentIterable.from(filesystem.readLines(symbolsFile))
+            filesystem
+                .readLines(symbolsFile)
+                .stream()
                 .filter(input -> !Strings.isNullOrEmpty(input))
-                .toList();
+                .collect(Collectors.toList());
       } catch (IOException e) {
         throw new RuntimeException(e);
       }
 
       String packageName = entry.getValue();
-      for (String line : linesInSymbolsFile) {
-        Optional<RDotTxtEntry> parsedEntry = RDotTxtEntry.parse(line);
-        Preconditions.checkState(parsedEntry.isPresent(), "Should be able to match '%s'.", line);
 
-        // We're only doing the remapping so Roboelectric is happy and it is already ignoring the
-        // id references found in the styleable section.  So let's do that as well so we don't have
-        // to get fancier than is needed.  That is, just re-enumerate all app-level resource ids
-        // and ignore everything else, allowing the styleable references to be messed up.
-        RDotTxtEntry resource = parsedEntry.get();
+      for (int index = 0; index < linesInSymbolsFile.size(); index++) {
+        RDotTxtEntry resource = getResourceAtIndex(linesInSymbolsFile, index);
+
         if (uberRDotTxtIds.isPresent()) {
           Preconditions.checkNotNull(finalIds);
           if (!finalIds.containsKey(resource)) {
@@ -363,10 +368,42 @@ public class MergeAndroidResourcesStep implements Step {
             continue;
           }
           resource = resource.copyWithNewIdValue(finalIds.get(resource));
-        } else if (resource.idValue.startsWith("0x7f")) {
+
+        } else if (useOldStyleableFormat && resource.idValue.startsWith("0x7f")) {
           Preconditions.checkNotNull(enumerator);
           resource = resource.copyWithNewIdValue(String.format("0x%08x", enumerator.next()));
+
+        } else if (useOldStyleableFormat) { // NOPMD  more readable this way, IMO.
+          // Nothing extra to do in this case.
+
+        } else if (resourceToIdValuesMap.containsKey(resource)) {
+          resource = resourceToIdValuesMap.get(resource);
+
+        } else if (resource.idType == IdType.INT_ARRAY && resource.type == RType.STYLEABLE) {
+          Map<RDotTxtEntry, String> styleableResourcesMap =
+              getStyleableResources(resourceToIdValuesMap, linesInSymbolsFile, resource, index + 1);
+
+          for (RDotTxtEntry styleableResource : styleableResourcesMap.keySet()) {
+            resourceToIdValuesMap.put(styleableResource, styleableResource);
+          }
+
+          // int[] styleable entry is not added to the cache as
+          // the number of child can differ in dependent libraries
+          resource =
+              resource.copyWithNewIdValue(
+                  String.format(
+                      "{ %s }",
+                      Joiner.on(RDotTxtEntry.INT_ARRAY_SEPARATOR)
+                          .join(styleableResourcesMap.values())));
+        } else {
+
+          Preconditions.checkNotNull(enumerator);
+          resource = resource.copyWithNewIdValue(String.format("0x%08x", enumerator.next()));
+
+          // Add resource to cache so that the id value is consistent across all R.txt
+          resourceToIdValuesMap.put(resource, resource);
         }
+
         if (bannedDuplicateResourceTypes.contains(resource.type)) {
           bannedDuplicateResourceToSymbolsFiles.put(resource, symbolsFile);
         }
@@ -380,13 +417,15 @@ public class MergeAndroidResourcesStep implements Step {
       Collection<Path> paths = resourceAndSymbolsFiles.getValue();
       if (paths.size() > 1) {
         RDotTxtEntry resource = resourceAndSymbolsFiles.getKey();
-        duplicateResourcesMessage.append(String.format(
-            "Resource '%s' (%s) is duplicated across: ",
-            resource.name,
-            resource.type));
+        duplicateResourcesMessage.append(
+            String.format(
+                "Resource '%s' (%s) is duplicated across: ", resource.name, resource.type));
         List<SourcePath> resourceDirs = new ArrayList<>(paths.size());
         for (Path path : paths) {
-          resourceDirs.add(symbolsFileToResourceDeps.get(path).getRes());
+          SourcePath res = symbolsFileToResourceDeps.get(path).getRes();
+          if (res != null) {
+            resourceDirs.add(res);
+          }
         }
         duplicateResourcesMessage.append(Joiner.on(", ").join(resourceDirs));
         duplicateResourcesMessage.append("\n");
@@ -400,6 +439,92 @@ public class MergeAndroidResourcesStep implements Step {
     return rDotJavaPackageToSymbolsFiles;
   }
 
+  private static Map<RDotTxtEntry, String> getStyleableResources(
+      Map<RDotTxtEntry, RDotTxtEntry> resourceToIdValuesMap,
+      List<String> linesInSymbolsFile,
+      RDotTxtEntry resource,
+      int index) {
+
+    Map<RDotTxtEntry, String> styleableResourceMap = new LinkedHashMap<>();
+    List<String> givenResourceIds = null;
+
+    for (int styleableIndex = 0;
+        styleableIndex + index < linesInSymbolsFile.size();
+        styleableIndex++) {
+
+      RDotTxtEntry styleableResource = getResourceAtIndex(linesInSymbolsFile,
+          styleableIndex + index)
+          .copyWithNewParent(resource.name);
+
+      String styleablePrefix = resource.name + "_";
+
+      if (styleableResource.idType == IdType.INT
+          && styleableResource.type == RType.STYLEABLE
+          && styleableResource.name.startsWith(styleablePrefix)) {
+
+        String attrName = styleableResource.name.substring(styleablePrefix.length());
+
+        RDotTxtEntry attrResource = new RDotTxtEntry(IdType.INT, RType.ATTR, attrName, "");
+
+        if (resourceToIdValuesMap.containsKey(attrResource)) {
+          attrResource = resourceToIdValuesMap.get(attrResource);
+        }
+
+        if (Strings.isNullOrEmpty(attrResource.idValue)) {
+          String attrIdValue;
+          if (givenResourceIds == null) {
+            if (resource.idValue.startsWith("{") && resource.idValue.endsWith("}")) {
+              givenResourceIds =
+                  Arrays.stream(
+                          resource
+                              .idValue
+                              .substring(1, resource.idValue.length() - 1)
+                              .split(RDotTxtEntry.INT_ARRAY_SEPARATOR))
+                      .map(String::trim)
+                      .filter(s -> s.length() > 0)
+                      .collect(Collectors.toList());
+            } else {
+              givenResourceIds = new ArrayList<>();
+            }
+          }
+
+          int styleableResourceIndex = Integer.valueOf(styleableResource.idValue);
+          if (styleableResourceIndex < givenResourceIds.size()) {
+
+            // These are attributes coming from android SDK -- `android_*`
+            attrIdValue = givenResourceIds.get(styleableResourceIndex);
+          } else {
+
+            // If not value is found just put the index.
+            attrIdValue = String.valueOf(styleableIndex);
+          }
+
+          // Add resource to cache so that the id value is consistent across all R.txt
+          attrResource = attrResource.copyWithNewIdValue(attrIdValue);
+          resourceToIdValuesMap.put(attrResource, attrResource);
+        }
+
+        styleableResourceMap.put(
+            styleableResource.copyWithNewIdValue(String.valueOf(styleableIndex)),
+            attrResource.idValue);
+
+      } else {
+        break;
+      }
+    }
+
+    return styleableResourceMap;
+  }
+
+  private static RDotTxtEntry getResourceAtIndex(List<String> linesInSymbolsFile, int index) {
+    String line = linesInSymbolsFile.get(index);
+
+    Optional<RDotTxtEntry> parsedEntry = RDotTxtEntry.parse(line);
+    Preconditions.checkState(parsedEntry.isPresent(), "Should be able to match '%s'.", line);
+
+    return parsedEntry.get();
+  }
+
   @Override
   public String getShortName() {
     return "android-res-merge";
@@ -407,22 +532,25 @@ public class MergeAndroidResourcesStep implements Step {
 
   @Override
   public String getDescription(ExecutionContext context) {
-    ImmutableList<String> resources =
-        FluentIterable.from(androidResourceDeps)
-            .transform(Object::toString)
-            .toSortedList(natural());
+    List<String> resources =
+        androidResourceDeps
+            .stream()
+            .map(Object::toString)
+            .sorted(natural())
+            .collect(Collectors.toList());
     return getShortName() + " " + Joiner.on(' ').join(resources);
   }
 
   private Path getPathToRDotJava(String rDotJavaPackage) {
-    return outputDir.resolve(rDotJavaPackage.replace(".", "/")).resolve(
-        String.format("%s.java", rName));
+    return outputDir
+        .resolve(rDotJavaPackage.replace('.', '/'))
+        .resolve(String.format("%s.java", rName));
   }
 
   private static class IntEnumerator {
     private int value;
 
-    public IntEnumerator(int start) {
+    IntEnumerator(int start) {
       value = start;
     }
 
@@ -437,5 +565,10 @@ public class MergeAndroidResourcesStep implements Step {
     DuplicateResourceException(String messageFormat, Object... args) {
       super(String.format(messageFormat, args));
     }
+  }
+
+  @VisibleForTesting
+  public EnumSet<RType> getBannedDuplicateResourceTypes() {
+    return bannedDuplicateResourceTypes;
   }
 }
