@@ -17,100 +17,94 @@
 package com.facebook.buck.jvm.java;
 
 import com.facebook.buck.io.ProjectFilesystem;
-import com.facebook.buck.model.BuildTarget;
 import com.facebook.buck.rules.ArchiveMemberSourcePath;
-import com.facebook.buck.rules.BuildRule;
-import com.facebook.buck.rules.BuildTargetSourcePath;
+import com.facebook.buck.rules.CellPathResolver;
 import com.facebook.buck.rules.SourcePath;
 import com.facebook.buck.util.HumanReadableException;
 import com.facebook.buck.util.ObjectMappers;
 import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import com.google.common.base.Preconditions;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.ImmutableSortedSet;
-
 import java.io.IOException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Iterator;
 import java.util.Map;
 import java.util.Optional;
 
-/**
- * Provides utility methods for reading dependency file entries.
- */
+/** Provides utility methods for reading dependency file entries. */
 class DefaultClassUsageFileReader {
-  private static final ObjectMapper objectMapper = ObjectMappers.newDefaultInstance();
-
-  /**
-   * Utility code, not instantiable
-   */
+  /** Utility code, not instantiable */
   private DefaultClassUsageFileReader() {}
 
-  private static ImmutableMap<Path, SourcePath> buildJarToAbiJarMap(
-      ImmutableSortedSet<BuildRule> deps) {
-    ImmutableMap.Builder<Path, SourcePath> jarAbsolutePathToAbiJarSourcePathBuilder =
-        ImmutableMap.builder();
-
-    for (BuildRule dep : deps) {
-      if (!(dep instanceof HasJavaAbi)) {
-        continue;
-      }
-
-      HasJavaAbi depWithJavaAbi = (HasJavaAbi) dep;
-      Optional<BuildTarget> depAbiJar = depWithJavaAbi.getAbiJar();
-      if (!depAbiJar.isPresent()) {
-        continue;
-      }
-
-      Path jarAbsolutePath = dep.getProjectFilesystem().resolve(dep.getPathToOutput());
-
-      jarAbsolutePathToAbiJarSourcePathBuilder.put(
-          jarAbsolutePath,
-          new BuildTargetSourcePath(depAbiJar.get()));
-    }
-
-    return jarAbsolutePathToAbiJarSourcePathBuilder.build();
+  private static ImmutableMap<String, ImmutableList<String>> loadClassUsageMap(Path mapFilePath)
+      throws IOException {
+    return ObjectMappers.readValue(
+        mapFilePath.toFile(), new TypeReference<ImmutableMap<String, ImmutableList<String>>>() {});
   }
 
-  private static ImmutableMap<String, ImmutableList<String>> loadClassUsageMap(
-      Path mapFilePath) throws IOException {
-    return objectMapper.readValue(
-        mapFilePath.toFile(),
-        new TypeReference<ImmutableMap<String, ImmutableList<String>>>() {
-        });
-  }
-
+  /**
+   * This method loads a class usage file that maps JARs to the list of files within those jars that
+   * were used. Given our rule's deps, we determine which of these JARS in the class usage file are
+   * actually among the deps of our rule.
+   */
   public static ImmutableList<SourcePath> loadFromFile(
       ProjectFilesystem projectFilesystem,
+      CellPathResolver cellPathResolver,
       Path classUsageFilePath,
-      ImmutableSortedSet<BuildRule> deps) {
-    final ImmutableMap<Path, SourcePath> jarAbsolutePathToAbiJarSourcePath =
-        buildJarToAbiJarMap(deps);
+      ImmutableMap<Path, SourcePath> jarPathToSourcePath) {
     final ImmutableList.Builder<SourcePath> builder = ImmutableList.builder();
     try {
       final ImmutableSet<Map.Entry<String, ImmutableList<String>>> classUsageEntries =
           loadClassUsageMap(classUsageFilePath).entrySet();
       for (Map.Entry<String, ImmutableList<String>> jarUsedClassesEntry : classUsageEntries) {
-        Path jarAbsolutePath = projectFilesystem.resolve(Paths.get(jarUsedClassesEntry.getKey()));
-        SourcePath abiJarSourcePath = jarAbsolutePathToAbiJarSourcePath.get(jarAbsolutePath);
-        if (abiJarSourcePath == null) {
+        final Path recordedPath = Paths.get(jarUsedClassesEntry.getKey());
+        Path jarAbsolutePath =
+            recordedPath.isAbsolute()
+                ? getAbsolutePathForCellRootedPath(recordedPath, cellPathResolver)
+                : projectFilesystem.resolve(recordedPath);
+        SourcePath sourcePath = jarPathToSourcePath.get(jarAbsolutePath);
+        if (sourcePath == null) {
           // This indicates a dependency that wasn't among the deps of the rule; i.e.,
           // it came from the build environment (JDK, Android SDK, etc.)
           continue;
         }
 
-        ImmutableList<String> classAbsolutePaths = jarUsedClassesEntry.getValue();
-        for (String classAbsolutePath : classAbsolutePaths) {
-          builder.add(
-              new ArchiveMemberSourcePath(abiJarSourcePath, Paths.get(classAbsolutePath)));
+        for (String classAbsolutePath : jarUsedClassesEntry.getValue()) {
+          builder.add(ArchiveMemberSourcePath.of(sourcePath, Paths.get(classAbsolutePath)));
         }
       }
     } catch (IOException e) {
-      throw new HumanReadableException(e, "Failed to load class usage files from %s:\n%s",
-          classUsageFilePath, e.getLocalizedMessage());
+      throw new HumanReadableException(
+          e,
+          "Failed to load class usage files from %s:\n%s",
+          classUsageFilePath,
+          e.getLocalizedMessage());
     }
     return builder.build();
+  }
+
+  /**
+   * Convert a path rooted in another cell to an absolute path in the filesystem
+   *
+   * @param cellRootedPath a path beginning with '/cell_name/' followed by a relative path in that
+   *     cell
+   * @param cellPathResolver the resolver capable of mapping cell_name to absolute root path
+   * @return an absolute path: 'path/to/cell/root/' + 'relative/path/in/cell'
+   */
+  private static Path getAbsolutePathForCellRootedPath(
+      Path cellRootedPath, CellPathResolver cellPathResolver) {
+    Preconditions.checkArgument(cellRootedPath.isAbsolute(), "Path must begin with /<cell_name>");
+    final Iterator<Path> pathIterator = cellRootedPath.iterator();
+    final Path cellName = pathIterator.next();
+    Path relativeToCellRoot = pathIterator.next();
+    while (pathIterator.hasNext()) {
+      relativeToCellRoot = relativeToCellRoot.resolve(pathIterator.next());
+    }
+    return cellPathResolver
+        .getCellPath(Optional.of(cellName.toString()))
+        .resolve(relativeToCellRoot);
   }
 }
