@@ -26,38 +26,35 @@ import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.hash.HashCode;
-
-import org.hamcrest.Matchers;
-import org.junit.Test;
-
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.HashMap;
 import java.util.Optional;
+import org.hamcrest.Matchers;
+import org.junit.Test;
 
 public class ManifestTest {
 
   private static final SourcePathResolver RESOLVER =
       new SourcePathResolver(
-          new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+          new SourcePathRuleFinder(
+              new BuildRuleResolver(
+                  TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())));
 
   @Test
   public void toMap() {
     ImmutableMap<RuleKey, ImmutableMap<String, HashCode>> entries =
         ImmutableMap.of(new RuleKey("aa"), ImmutableMap.of("foo/bar.h", HashCode.fromInt(20)));
-    assertThat(
-        Manifest.fromMap(entries).toMap(),
-        Matchers.equalTo(entries));
+    assertThat(Manifest.fromMap(new RuleKey("cc"), entries).toMap(), Matchers.equalTo(entries));
   }
 
   @Test
   public void emptyManifest() {
-    assertThat(
-        new Manifest().toMap().entrySet(),
-        Matchers.empty());
+    assertThat(new Manifest(new RuleKey("cc")).toMap().entrySet(), Matchers.empty());
   }
 
   @Test
@@ -65,17 +62,15 @@ public class ManifestTest {
     ImmutableMap<RuleKey, ImmutableMap<String, HashCode>> entries =
         ImmutableMap.of(new RuleKey("aa"), ImmutableMap.of("foo/bar.h", HashCode.fromInt(20)));
     ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream();
-    Manifest.fromMap(entries).serialize(byteArrayOutputStream);
+    Manifest.fromMap(new RuleKey("cc"), entries).serialize(byteArrayOutputStream);
     Manifest deserialized =
         new Manifest(new ByteArrayInputStream(byteArrayOutputStream.toByteArray()));
-    assertThat(
-        deserialized.toMap(),
-        Matchers.equalTo(entries));
+    assertThat(deserialized.toMap(), Matchers.equalTo(entries));
   }
 
   @Test
   public void addEntry() throws IOException {
-    Manifest manifest = new Manifest();
+    Manifest manifest = new Manifest(new RuleKey("cc"));
     RuleKey key = new RuleKey("aa");
     SourcePath input = new FakeSourcePath("input.h");
     HashCode hashCode = HashCode.fromInt(20);
@@ -86,21 +81,22 @@ public class ManifestTest {
         manifest.toMap(),
         Matchers.equalTo(
             ImmutableMap.of(
-                key,
-                ImmutableMap.of(RESOLVER.getRelativePath(input).toString(), hashCode))));
+                key, ImmutableMap.of(RESOLVER.getRelativePath(input).toString(), hashCode))));
   }
 
   @Test
   public void addEntryFromArchive() throws IOException {
-    Manifest manifest = new Manifest();
+    Manifest manifest = new Manifest(new RuleKey("cc"));
     RuleKey key = new RuleKey("aa");
-    SourcePath input = new ArchiveMemberSourcePath(
-        new FakeSourcePath("somewhere/a.jar"),
-        Paths.get("Member.class"));
+    SourcePath input =
+        ArchiveMemberSourcePath.of(
+            new FakeSourcePath("somewhere/a.jar"), Paths.get("Member.class"));
     HashCode hashCode = HashCode.fromInt(20);
     FileHashCache fileHashCache =
-        FakeFileHashCache.withArchiveMemberPathHashes(
-            ImmutableMap.of(RESOLVER.getAbsoluteArchiveMemberPath(input), hashCode));
+        new FakeFileHashCache(
+            new HashMap<>(),
+            ImmutableMap.of(RESOLVER.getAbsoluteArchiveMemberPath(input), hashCode),
+            new HashMap<>());
     manifest.addEntry(fileHashCache, key, RESOLVER, ImmutableSet.of(input), ImmutableSet.of(input));
     assertThat(
         manifest.toMap(),
@@ -108,8 +104,7 @@ public class ManifestTest {
             ImmutableMap.of(
                 key,
                 ImmutableMap.of(
-                    RESOLVER.getRelativeArchiveMemberPath(input).toString(),
-                    hashCode))));
+                    RESOLVER.getRelativeArchiveMemberPath(input).toString(), hashCode))));
   }
 
   @Test
@@ -134,13 +129,9 @@ public class ManifestTest {
                 RESOLVER.getAbsolutePath(input2),
                 hashCode2));
 
-    Manifest manifest1 = new Manifest();
+    Manifest manifest1 = new Manifest(new RuleKey("cc"));
     manifest1.addEntry(
-        fileHashCache,
-        key,
-        RESOLVER,
-        ImmutableSet.of(input1, input2),
-        ImmutableSet.of(input1));
+        fileHashCache, key, RESOLVER, ImmutableSet.of(input1, input2), ImmutableSet.of(input1));
     assertThat(
         manifest1.toMap(),
         Matchers.equalTo(
@@ -149,17 +140,11 @@ public class ManifestTest {
                 ImmutableMap.of(
                     RESOLVER.getRelativePath(input1).toString(),
                     Manifest.hashSourcePathGroup(
-                        fileHashCache,
-                        RESOLVER,
-                        ImmutableList.of(input1, input2))))));
+                        fileHashCache, RESOLVER, ImmutableList.of(input1, input2))))));
 
-    Manifest manifest2 = new Manifest();
+    Manifest manifest2 = new Manifest(new RuleKey("cc"));
     manifest2.addEntry(
-        fileHashCache,
-        key,
-        RESOLVER,
-        ImmutableSet.of(input1, input2),
-        ImmutableSet.of(input2));
+        fileHashCache, key, RESOLVER, ImmutableSet.of(input1, input2), ImmutableSet.of(input2));
     assertThat(
         manifest2.toMap(),
         Matchers.equalTo(
@@ -168,9 +153,7 @@ public class ManifestTest {
                 ImmutableMap.of(
                     RESOLVER.getRelativePath(input2).toString(),
                     Manifest.hashSourcePathGroup(
-                        fileHashCache,
-                        RESOLVER,
-                        ImmutableList.of(input1, input2))))));
+                        fileHashCache, RESOLVER, ImmutableList.of(input1, input2))))));
   }
 
   @Test
@@ -180,9 +163,9 @@ public class ManifestTest {
     HashCode hashCode = HashCode.fromInt(20);
     Manifest manifest =
         Manifest.fromMap(
+            new RuleKey("cc"),
             ImmutableMap.of(
-                key,
-                ImmutableMap.of(RESOLVER.getRelativePath(input).toString(), hashCode)));
+                key, ImmutableMap.of(RESOLVER.getRelativePath(input).toString(), hashCode)));
     FileHashCache fileHashCache =
         new FakeFileHashCache(ImmutableMap.of(RESOLVER.getAbsolutePath(input), hashCode));
     assertThat(
@@ -214,29 +197,26 @@ public class ManifestTest {
 
     Manifest manifest1 =
         Manifest.fromMap(
+            new RuleKey("cc"),
             ImmutableMap.of(
                 key,
                 ImmutableMap.of(
                     RESOLVER.getRelativePath(input1).toString(),
                     Manifest.hashSourcePathGroup(
-                        fileHashCache,
-                        RESOLVER,
-                        ImmutableList.of(input1, input2)))));
+                        fileHashCache, RESOLVER, ImmutableList.of(input1, input2)))));
     assertThat(
         manifest1.lookup(fileHashCache, RESOLVER, ImmutableSet.of(input1, input2)),
         Matchers.equalTo(Optional.of(key)));
 
-
     Manifest manifest2 =
         Manifest.fromMap(
+            new RuleKey("cc"),
             ImmutableMap.of(
                 key,
                 ImmutableMap.of(
                     RESOLVER.getRelativePath(input2).toString(),
                     Manifest.hashSourcePathGroup(
-                        fileHashCache,
-                        RESOLVER,
-                        ImmutableList.of(input1, input2)))));
+                        fileHashCache, RESOLVER, ImmutableList.of(input1, input2)))));
     assertThat(
         manifest2.lookup(fileHashCache, RESOLVER, ImmutableSet.of(input1, input2)),
         Matchers.equalTo(Optional.of(key)));
@@ -248,6 +228,7 @@ public class ManifestTest {
     SourcePath input = new FakeSourcePath("input.h");
     Manifest manifest =
         Manifest.fromMap(
+            new RuleKey("cc"),
             ImmutableMap.of(
                 key,
                 ImmutableMap.of(RESOLVER.getRelativePath(input).toString(), HashCode.fromInt(1))));
@@ -265,6 +246,7 @@ public class ManifestTest {
     SourcePath input = new FakeSourcePath("input.h");
     Manifest manifest =
         Manifest.fromMap(
+            new RuleKey("cc"),
             ImmutableMap.of(
                 key,
                 ImmutableMap.of(RESOLVER.getRelativePath(input).toString(), HashCode.fromInt(1))));
@@ -281,6 +263,7 @@ public class ManifestTest {
     SourcePath input = new FakeSourcePath("input.h");
     Manifest manifest =
         Manifest.fromMap(
+            new RuleKey("cc"),
             ImmutableMap.of(
                 key1,
                 ImmutableMap.of(RESOLVER.getRelativePath(input).toString(), HashCode.fromInt(1)),
@@ -296,23 +279,22 @@ public class ManifestTest {
 
   @Test
   public void size() {
-    assertThat(new Manifest().size(), Matchers.equalTo(0));
+    assertThat(new Manifest(new RuleKey("cc")).size(), Matchers.equalTo(0));
     assertThat(
         Manifest.fromMap(
-            ImmutableMap.of(
-                new RuleKey("aa"),
-                ImmutableMap.of("foo.h", HashCode.fromInt(0))))
+                new RuleKey("cc"),
+                ImmutableMap.of(new RuleKey("aa"), ImmutableMap.of("foo.h", HashCode.fromInt(0))))
             .size(),
         Matchers.equalTo(1));
     assertThat(
         Manifest.fromMap(
-            ImmutableMap.of(
-                new RuleKey("aa"),
-                ImmutableMap.of("foo.h", HashCode.fromInt(0)),
-                new RuleKey("bb"),
-                ImmutableMap.of("bar.h", HashCode.fromInt(0))))
+                new RuleKey("cc"),
+                ImmutableMap.of(
+                    new RuleKey("aa"),
+                    ImmutableMap.of("foo.h", HashCode.fromInt(0)),
+                    new RuleKey("bb"),
+                    ImmutableMap.of("bar.h", HashCode.fromInt(0))))
             .size(),
         Matchers.equalTo(2));
   }
-
 }
