@@ -30,22 +30,24 @@ import com.facebook.buck.jvm.java.JavaLibraryBuilder;
 import com.facebook.buck.model.BuildTarget;
 import com.facebook.buck.model.BuildTargetFactory;
 import com.facebook.buck.rules.keys.DefaultRuleKeyFactory;
+import com.facebook.buck.rules.keys.RuleKeyBuilder;
+import com.facebook.buck.rules.keys.RuleKeyFactory;
+import com.facebook.buck.rules.keys.RuleKeyResult;
+import com.facebook.buck.rules.keys.UncachedRuleKeyBuilder;
 import com.facebook.buck.testutil.FakeFileHashCache;
 import com.facebook.buck.testutil.FakeProjectFilesystem;
-import com.facebook.buck.testutil.packaged_resource.PackagedResourceTestUtil;
 import com.facebook.buck.util.HumanReadableException;
 import com.facebook.buck.util.cache.DefaultFileHashCache;
 import com.facebook.buck.util.cache.FileHashCache;
 import com.facebook.buck.util.cache.NullFileHashCache;
+import com.facebook.buck.util.cache.StackedFileHashCache;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSortedSet;
 import com.google.common.hash.HashCode;
-
-import org.junit.Test;
-
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import org.junit.Test;
 
 public class RuleKeyTest {
 
@@ -57,33 +59,38 @@ public class RuleKeyTest {
 
   @Test(expected = HumanReadableException.class)
   public void shouldNotAllowPathsInRuleKeysWhenSetReflectively() {
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
-    RuleKeyBuilder<RuleKey> builder = createEmptyRuleKey(resolver);
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = new SourcePathResolver(ruleFinder);
+    RuleKeyBuilder<HashCode> builder = createBuilder(resolver, ruleFinder);
 
     builder.setReflectively("path", Paths.get("some/path"));
   }
 
-  /**
-   * Ensure that build rules with the same inputs but different deps have unique RuleKeys.
-   */
+  /** Ensure that build rules with the same inputs but different deps have unique RuleKeys. */
   @Test
   public void testRuleKeyDependsOnDeps() throws Exception {
     FakeProjectFilesystem filesystem = new FakeProjectFilesystem();
-    FileHashCache hashCache = DefaultFileHashCache.createDefaultFileHashCache(filesystem);
+    FileHashCache hashCache =
+        new StackedFileHashCache(
+            ImmutableList.of(DefaultFileHashCache.createDefaultFileHashCache(filesystem, false)));
     BuildRuleResolver ruleResolver1 =
         new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
     BuildRuleResolver ruleResolver2 =
         new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
+    SourcePathRuleFinder ruleFinder1 = new SourcePathRuleFinder(ruleResolver1);
     DefaultRuleKeyFactory ruleKeyFactory =
-        new DefaultRuleKeyFactory(0, hashCache, new SourcePathResolver(ruleResolver1));
+        new DefaultRuleKeyFactory(0, hashCache, new SourcePathResolver(ruleFinder1), ruleFinder1);
+    SourcePathRuleFinder ruleFinder2 = new SourcePathRuleFinder(ruleResolver2);
     DefaultRuleKeyFactory ruleKeyFactory2 =
-        new DefaultRuleKeyFactory(0, hashCache, new SourcePathResolver(ruleResolver2));
+        new DefaultRuleKeyFactory(0, hashCache, new SourcePathResolver(ruleFinder2), ruleFinder2);
 
     // Create a dependent build rule, //src/com/facebook/buck/cli:common.
-    JavaLibraryBuilder builder = JavaLibraryBuilder
-        .createBuilder(BuildTargetFactory.newInstance("//src/com/facebook/buck/cli:common"));
+    JavaLibraryBuilder builder =
+        JavaLibraryBuilder.createBuilder(
+            BuildTargetFactory.newInstance("//src/com/facebook/buck/cli:common"));
     BuildRule commonJavaLibrary = builder.build(ruleResolver1);
     builder.build(ruleResolver2);
 
@@ -91,9 +98,10 @@ public class RuleKeyTest {
     Path mainSrc = Paths.get("src/com/facebook/buck/cli/Main.java");
     filesystem.mkdirs(mainSrc.getParent());
     filesystem.writeContentsToPath("hello", mainSrc);
-    JavaLibraryBuilder javaLibraryBuilder = JavaLibraryBuilder
-        .createBuilder(BuildTargetFactory.newInstance("//src/com/facebook/buck/cli:cli"))
-        .addSrc(mainSrc);
+    JavaLibraryBuilder javaLibraryBuilder =
+        JavaLibraryBuilder.createBuilder(
+                BuildTargetFactory.newInstance("//src/com/facebook/buck/cli:cli"))
+            .addSrc(mainSrc);
     BuildRule libraryNoCommon = javaLibraryBuilder.build(ruleResolver1, filesystem);
 
     // Create the same java_library() rule, but with a dep on //src/com/facebook/buck/cli:common.
@@ -103,27 +111,32 @@ public class RuleKeyTest {
     // Assert that the RuleKeys are distinct.
     RuleKey r1 = ruleKeyFactory.build(libraryNoCommon);
     RuleKey r2 = ruleKeyFactory2.build(libraryWithCommon);
-    assertThat("Rule keys should be distinct because the deps of the rules are different.",
+    assertThat(
+        "Rule keys should be distinct because the deps of the rules are different.",
         r1,
         not(equalTo(r2)));
   }
 
   @Test
   public void ensureSimpleValuesCorrectRuleKeyChangesMade() {
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
-    RuleKey reflective = createEmptyRuleKey(resolver)
-        .setReflectively("long", 42L)
-        .setReflectively("boolean", true)
-        .setReflectively("path", new FakeSourcePath("location/of/the/rebel/plans"))
-        .build();
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = new SourcePathResolver(ruleFinder);
+    RuleKey reflective =
+        createBuilder(resolver, ruleFinder)
+            .setReflectively("long", 42L)
+            .setReflectively("boolean", true)
+            .setReflectively("path", new FakeSourcePath("location/of/the/rebel/plans"))
+            .build(RuleKey::new);
 
-    RuleKey manual = createEmptyRuleKey(resolver)
-        .setReflectively("long", 42L)
-        .setReflectively("boolean", true)
-        .setReflectively("path", new FakeSourcePath("location/of/the/rebel/plans"))
-        .build();
+    RuleKey manual =
+        createBuilder(resolver, ruleFinder)
+            .setReflectively("long", 42L)
+            .setReflectively("boolean", true)
+            .setReflectively("path", new FakeSourcePath("location/of/the/rebel/plans"))
+            .build(RuleKey::new);
 
     assertEquals(manual, reflective);
   }
@@ -131,20 +144,22 @@ public class RuleKeyTest {
   @Test
   public void ensureTwoListsOfSameRuleKeyAppendablesHaveSameRuleKey() {
     ImmutableList<TestRuleKeyAppendable> ruleKeyAppendableList =
-        ImmutableList.of(
-            new TestRuleKeyAppendable("foo"),
-            new TestRuleKeyAppendable("bar"));
+        ImmutableList.of(new TestRuleKeyAppendable("foo"), new TestRuleKeyAppendable("bar"));
 
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
-    RuleKey ruleKeyPairA = createEmptyRuleKey(resolver)
-        .setReflectively("ruleKeyAppendableList", ruleKeyAppendableList)
-        .build();
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = new SourcePathResolver(ruleFinder);
+    RuleKey ruleKeyPairA =
+        createBuilder(resolver, ruleFinder)
+            .setReflectively("ruleKeyAppendableList", ruleKeyAppendableList)
+            .build(RuleKey::new);
 
-    RuleKey ruleKeyPairB = createEmptyRuleKey(resolver)
-        .setReflectively("ruleKeyAppendableList", ruleKeyAppendableList)
-        .build();
+    RuleKey ruleKeyPairB =
+        createBuilder(resolver, ruleFinder)
+            .setReflectively("ruleKeyAppendableList", ruleKeyAppendableList)
+            .build(RuleKey::new);
 
     assertEquals(ruleKeyPairA, ruleKeyPairB);
   }
@@ -152,25 +167,25 @@ public class RuleKeyTest {
   @Test
   public void ensureTwoListsOfDifferentRuleKeyAppendablesHaveDifferentRuleKeys() {
     ImmutableList<TestRuleKeyAppendable> ruleKeyAppendableListA =
-        ImmutableList.of(
-            new TestRuleKeyAppendable("foo"),
-            new TestRuleKeyAppendable("bar"));
+        ImmutableList.of(new TestRuleKeyAppendable("foo"), new TestRuleKeyAppendable("bar"));
 
     ImmutableList<TestRuleKeyAppendable> ruleKeyAppendableListB =
-        ImmutableList.of(
-            new TestRuleKeyAppendable("bar"),
-            new TestRuleKeyAppendable("foo"));
+        ImmutableList.of(new TestRuleKeyAppendable("bar"), new TestRuleKeyAppendable("foo"));
 
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
-    RuleKey ruleKeyPairA = createEmptyRuleKey(resolver)
-        .setReflectively("ruleKeyAppendableList", ruleKeyAppendableListA)
-        .build();
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = new SourcePathResolver(ruleFinder);
+    RuleKey ruleKeyPairA =
+        createBuilder(resolver, ruleFinder)
+            .setReflectively("ruleKeyAppendableList", ruleKeyAppendableListA)
+            .build(RuleKey::new);
 
-    RuleKey ruleKeyPairB = createEmptyRuleKey(resolver)
-        .setReflectively("ruleKeyAppendableList", ruleKeyAppendableListB)
-        .build();
+    RuleKey ruleKeyPairB =
+        createBuilder(resolver, ruleFinder)
+            .setReflectively("ruleKeyAppendableList", ruleKeyAppendableListB)
+            .build(RuleKey::new);
 
     assertNotEquals(ruleKeyPairA, ruleKeyPairB);
   }
@@ -182,16 +197,20 @@ public class RuleKeyTest {
             "foo", new TestRuleKeyAppendable("foo"),
             "bar", new TestRuleKeyAppendable("bar"));
 
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
-    RuleKey ruleKeyPairA = createEmptyRuleKey(resolver)
-        .setReflectively("ruleKeyAppendableMap", ruleKeyAppendableMap)
-        .build();
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = new SourcePathResolver(ruleFinder);
+    RuleKey ruleKeyPairA =
+        createBuilder(resolver, ruleFinder)
+            .setReflectively("ruleKeyAppendableMap", ruleKeyAppendableMap)
+            .build(RuleKey::new);
 
-    RuleKey ruleKeyPairB = createEmptyRuleKey(resolver)
-        .setReflectively("ruleKeyAppendableMap", ruleKeyAppendableMap)
-        .build();
+    RuleKey ruleKeyPairB =
+        createBuilder(resolver, ruleFinder)
+            .setReflectively("ruleKeyAppendableMap", ruleKeyAppendableMap)
+            .build(RuleKey::new);
 
     assertEquals(ruleKeyPairA, ruleKeyPairB);
   }
@@ -208,16 +227,20 @@ public class RuleKeyTest {
             "bar", new TestRuleKeyAppendable("bar"),
             "foo", new TestRuleKeyAppendable("foo"));
 
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
-    RuleKey ruleKeyPairA = createEmptyRuleKey(resolver)
-        .setReflectively("ruleKeyAppendableMap", ruleKeyAppendableMapA)
-        .build();
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = new SourcePathResolver(ruleFinder);
+    RuleKey ruleKeyPairA =
+        createBuilder(resolver, ruleFinder)
+            .setReflectively("ruleKeyAppendableMap", ruleKeyAppendableMapA)
+            .build(RuleKey::new);
 
-    RuleKey ruleKeyPairB = createEmptyRuleKey(resolver)
-        .setReflectively("ruleKeyAppendableMap", ruleKeyAppendableMapB)
-        .build();
+    RuleKey ruleKeyPairB =
+        createBuilder(resolver, ruleFinder)
+            .setReflectively("ruleKeyAppendableMap", ruleKeyAppendableMapB)
+            .build(RuleKey::new);
 
     assertNotEquals(ruleKeyPairA, ruleKeyPairB);
   }
@@ -227,37 +250,46 @@ public class RuleKeyTest {
     ImmutableList<SourceRoot> sourceroots = ImmutableList.of(new SourceRoot("cake"));
     ImmutableList<String> strings = ImmutableList.of("one", "two");
 
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
-    RuleKey reflective = createEmptyRuleKey(resolver)
-        .setReflectively("sourceroot", sourceroots)
-        .setReflectively("strings", strings)
-        .build();
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = new SourcePathResolver(ruleFinder);
+    RuleKey reflective =
+        createBuilder(resolver, ruleFinder)
+            .setReflectively("sourceroot", sourceroots)
+            .setReflectively("strings", strings)
+            .build(RuleKey::new);
 
-    RuleKey manual = createEmptyRuleKey(resolver)
-        .setReflectively("sourceroot", sourceroots)
-        .setReflectively("strings", strings)
-        .build();
+    RuleKey manual =
+        createBuilder(resolver, ruleFinder)
+            .setReflectively("sourceroot", sourceroots)
+            .setReflectively("strings", strings)
+            .build(RuleKey::new);
 
     assertEquals(manual, reflective);
   }
 
   @Test
   public void differentSeedsMakeDifferentKeys() {
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-    );
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = new SourcePathResolver(ruleFinder);
 
     BuildTarget buildTarget = BuildTargetFactory.newInstance("//some:example");
     BuildRule buildRule = new FakeBuildRule(buildTarget, resolver);
 
-    RuleKey empty1 = new DefaultRuleKeyFactory(0, new NullFileHashCache(), resolver)
-        .build(buildRule);
-    RuleKey empty2 = new DefaultRuleKeyFactory(0, new NullFileHashCache(), resolver)
-        .build(buildRule);
-    RuleKey empty3 = new DefaultRuleKeyFactory(1, new NullFileHashCache(), resolver)
-        .build(buildRule);
+    RuleKey empty1 =
+        new DefaultRuleKeyFactory(0, new NullFileHashCache(), resolver, ruleFinder)
+            .build(buildRule);
+    RuleKey empty2 =
+        new DefaultRuleKeyFactory(0, new NullFileHashCache(), resolver, ruleFinder)
+            .build(buildRule);
+    RuleKey empty3 =
+        new DefaultRuleKeyFactory(1, new NullFileHashCache(), resolver, ruleFinder)
+            .build(buildRule);
 
     assertThat(empty1, is(equalTo(empty2)));
     assertThat(empty1, is(not(equalTo(empty3))));
@@ -265,21 +297,17 @@ public class RuleKeyTest {
 
   @Test
   public void testRuleKeyEqualsAndHashCodeMethods() {
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = new SourcePathResolver(ruleFinder);
     RuleKey keyPair1 =
-        createEmptyRuleKey(resolver)
-            .setReflectively("something", "foo")
-            .build();
+        createBuilder(resolver, ruleFinder).setReflectively("something", "foo").build(RuleKey::new);
     RuleKey keyPair2 =
-        createEmptyRuleKey(resolver)
-            .setReflectively("something", "foo")
-            .build();
+        createBuilder(resolver, ruleFinder).setReflectively("something", "foo").build(RuleKey::new);
     RuleKey keyPair3 =
-        createEmptyRuleKey(resolver)
-            .setReflectively("something", "bar")
-            .build();
+        createBuilder(resolver, ruleFinder).setReflectively("something", "bar").build(RuleKey::new);
     assertEquals(keyPair1, keyPair2);
     assertEquals(keyPair1.hashCode(), keyPair2.hashCode());
     assertNotEquals(keyPair1, keyPair3);
@@ -292,94 +320,33 @@ public class RuleKeyTest {
   public void setInputPathSourcePath() {
     ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
 
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = new SourcePathResolver(ruleFinder);
     // Changing the name of a named source path should change the hash...
     assertNotEquals(
-        createEmptyRuleKey(resolver)
-            .setReflectively("key", new PathSourcePath(projectFilesystem, Paths.get("something")))
-            .build(),
-        createEmptyRuleKey(resolver)
-            .setReflectively(
-                "key",
-                new PathSourcePath(projectFilesystem, Paths.get("something", "else")))
-            .build());
+        buildResult(
+            createBuilder(resolver, ruleFinder)
+                .setReflectively(
+                    "key", new PathSourcePath(projectFilesystem, Paths.get("something")))),
+        buildResult(
+            createBuilder(resolver, ruleFinder)
+                .setReflectively(
+                    "key", new PathSourcePath(projectFilesystem, Paths.get("something", "else")))));
 
     // ... as should changing the key
     assertNotEquals(
-        createEmptyRuleKey(resolver)
-            .setReflectively("key", new PathSourcePath(projectFilesystem, Paths.get("something")))
-            .build(),
-        createEmptyRuleKey(resolver)
-            .setReflectively(
-                "different-key",
-                new PathSourcePath(projectFilesystem, Paths.get("something")))
-            .build());
-  }
-
-  @Test
-  public void setDifferentResourceSourcePaths() {
-    ProjectFilesystem filesystem = new FakeProjectFilesystem();
-
-    ResourceSourcePath resourceSourcePathOne =
-        new ResourceSourcePath(
-            PackagedResourceTestUtil.getPackagedResource(
-                filesystem,
-                "testdata/packaged_resource_one"));
-
-    ResourceSourcePath resourceSourcePathTwo =
-        new ResourceSourcePath(
-            PackagedResourceTestUtil.getPackagedResource(
-                filesystem,
-                "testdata/packaged_resource_two"));
-
-    // Changing the file name should change the rule key
-    assertNotEquals(
-        createEmptyRuleKey(
-            new SourcePathResolver(
-                new BuildRuleResolver(
-                    TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())))
-            .setReflectively("key", resourceSourcePathOne)
-            .build(),
-        createEmptyRuleKey(
-            new SourcePathResolver(
-                new BuildRuleResolver(
-                    TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())))
-            .setReflectively("key", resourceSourcePathTwo)
-            .build());
-  }
-
-  @Test
-  public void setDifferentNonHashingResourceSourcePaths() {
-    ProjectFilesystem filesystem = new FakeProjectFilesystem();
-
-    ResourceSourcePath resourceSourcePathOne =
-        new ResourceSourcePath(
-            PackagedResourceTestUtil.getPackagedResource(
-                filesystem,
-                "testdata/packaged_resource_one"));
-
-    ResourceSourcePath resourceSourcePathTwo =
-        new ResourceSourcePath(
-            PackagedResourceTestUtil.getPackagedResource(
-                filesystem,
-                "testdata/packaged_resource_two"));
-
-    // Changing the resource identifier should change the rule key
-    assertNotEquals(
-        createEmptyRuleKey(
-            new SourcePathResolver(
-                new BuildRuleResolver(
-                    TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())))
-            .setReflectively("key", new NonHashableSourcePathContainer(resourceSourcePathOne))
-            .build(),
-        createEmptyRuleKey(
-            new SourcePathResolver(
-                new BuildRuleResolver(
-                    TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())))
-            .setReflectively("key", new NonHashableSourcePathContainer(resourceSourcePathTwo))
-            .build());
+        buildResult(
+            createBuilder(resolver, ruleFinder)
+                .setReflectively(
+                    "key", new PathSourcePath(projectFilesystem, Paths.get("something")))),
+        buildResult(
+            createBuilder(resolver, ruleFinder)
+                .setReflectively(
+                    "different-key",
+                    new PathSourcePath(projectFilesystem, Paths.get("something")))));
   }
 
   @Test
@@ -389,47 +356,29 @@ public class RuleKeyTest {
     PathSourcePath sourcePathTwo = new PathSourcePath(projectFilesystem, Paths.get("something2"));
 
     // Changing the relative path should change the rule key
+    SourcePathRuleFinder ruleFinder1 =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathRuleFinder ruleFinder2 =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
     assertNotEquals(
-        createEmptyRuleKey(
-            new SourcePathResolver(
-                new BuildRuleResolver(
-                    TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())))
-            .setReflectively("key", new NonHashableSourcePathContainer(sourcePathOne))
-            .build(),
-        createEmptyRuleKey(
-            new SourcePathResolver(
-                new BuildRuleResolver(
-                    TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())))
-            .setReflectively("key", new NonHashableSourcePathContainer(sourcePathTwo))
-            .build());
-  }
-
-  @Test
-  public void setNonHashingSourcePathAndRegularSourcePath() {
-    ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
-    PathSourcePath sourcePathOne = new PathSourcePath(projectFilesystem, Paths.get("something"));
-
-    // Regular source path and non hashable source path should have different keys
-    assertNotEquals(
-        createEmptyRuleKey(
-            new SourcePathResolver(
-                new BuildRuleResolver(
-                    TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())))
-            .setReflectively("key", new NonHashableSourcePathContainer(sourcePathOne))
-            .build(),
-        createEmptyRuleKey(
-            new SourcePathResolver(
-                new BuildRuleResolver(
-                    TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())))
-            .setReflectively("key", sourcePathOne)
-            .build());
+        buildResult(
+            createBuilder(new SourcePathResolver(ruleFinder1), ruleFinder1)
+                .setReflectively("key", new NonHashableSourcePathContainer(sourcePathOne))),
+        buildResult(
+            createBuilder(new SourcePathResolver(ruleFinder2), ruleFinder2)
+                .setReflectively("key", new NonHashableSourcePathContainer(sourcePathTwo))));
   }
 
   @Test
   public void setInputBuildTargetSourcePath() {
     BuildRuleResolver resolver =
         new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
-    SourcePathResolver pathResolver = new SourcePathResolver(resolver);
+    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(resolver);
+    SourcePathResolver pathResolver = new SourcePathResolver(ruleFinder);
     FakeBuildRule fake1 = new FakeBuildRule("//:fake1", pathResolver);
     FakeBuildRule fake2 = new FakeBuildRule("//:fake2", pathResolver);
     resolver.addToIndex(fake1);
@@ -437,221 +386,188 @@ public class RuleKeyTest {
 
     // Verify that two BuildTargetSourcePaths with the same rule and path are equal.
     assertEquals(
-        createEmptyRuleKey(
-            pathResolver)
-            .setReflectively(
-                "key",
-                new BuildTargetSourcePath(
-                    fake1.getBuildTarget(),
-                    Paths.get("location")))
-            .build(),
-        createEmptyRuleKey(
-            pathResolver)
-            .setReflectively(
-                "key",
-                new BuildTargetSourcePath(
-                    fake1.getBuildTarget(),
-                    Paths.get("location")))
-            .build());
+        buildResult(
+            createBuilder(pathResolver, ruleFinder)
+                .setReflectively(
+                    "key",
+                    new ExplicitBuildTargetSourcePath(
+                        fake1.getBuildTarget(), Paths.get("location")))),
+        buildResult(
+            createBuilder(pathResolver, ruleFinder)
+                .setReflectively(
+                    "key",
+                    new ExplicitBuildTargetSourcePath(
+                        fake1.getBuildTarget(), Paths.get("location")))));
 
     // Verify that just changing the path of the build rule changes the rule key.
     assertNotEquals(
-        createEmptyRuleKey(
-            pathResolver)
-            .setReflectively(
-                "key",
-                new BuildTargetSourcePath(
-                    fake1.getBuildTarget(),
-                    Paths.get("location")))
-            .build(),
-        createEmptyRuleKey(
-            pathResolver)
-            .setReflectively(
-                "key",
-                new BuildTargetSourcePath(
-                    fake1.getBuildTarget(),
-                    Paths.get("different")))
-            .build());
+        buildResult(
+            createBuilder(pathResolver, ruleFinder)
+                .setReflectively(
+                    "key",
+                    new ExplicitBuildTargetSourcePath(
+                        fake1.getBuildTarget(), Paths.get("location")))),
+        buildResult(
+            createBuilder(pathResolver, ruleFinder)
+                .setReflectively(
+                    "key",
+                    new ExplicitBuildTargetSourcePath(
+                        fake1.getBuildTarget(), Paths.get("different")))));
 
     // Verify that just changing the build rule rule key changes the calculated rule key.
     assertNotEquals(
-        createEmptyRuleKey(
-            pathResolver)
-            .setReflectively(
-                "key",
-                new BuildTargetSourcePath(
-                    fake1.getBuildTarget(),
-                    Paths.get("location")))
-            .build(),
-        createEmptyRuleKey(
-            pathResolver)
-            .setReflectively(
-                "key",
-                new BuildTargetSourcePath(
-                    fake2.getBuildTarget(),
-                    Paths.get("location")))
-            .build());
+        buildResult(
+            createBuilder(pathResolver, ruleFinder)
+                .setReflectively(
+                    "key",
+                    new ExplicitBuildTargetSourcePath(
+                        fake1.getBuildTarget(), Paths.get("location")))),
+        buildResult(
+            createBuilder(pathResolver, ruleFinder)
+                .setReflectively(
+                    "key",
+                    new ExplicitBuildTargetSourcePath(
+                        fake2.getBuildTarget(), Paths.get("location")))));
 
     // Verify that just changing the key changes the calculated rule key.
     assertNotEquals(
-        createEmptyRuleKey(
-            pathResolver)
-            .setReflectively(
-                "key",
-                new BuildTargetSourcePath(
-                    fake1.getBuildTarget(),
-                    Paths.get("location")))
-            .build(),
-        createEmptyRuleKey(
-            pathResolver)
-            .setReflectively(
-                "different-key",
-                new BuildTargetSourcePath(
-                    fake1.getBuildTarget(),
-                    Paths.get("location")))
-            .build());
+        buildResult(
+            createBuilder(pathResolver, ruleFinder)
+                .setReflectively(
+                    "key",
+                    new ExplicitBuildTargetSourcePath(
+                        fake1.getBuildTarget(), Paths.get("location")))),
+        buildResult(
+            createBuilder(pathResolver, ruleFinder)
+                .setReflectively(
+                    "different-key",
+                    new ExplicitBuildTargetSourcePath(
+                        fake1.getBuildTarget(), Paths.get("location")))));
   }
 
   @Test
   public void setInputArchiveMemberSourcePath() {
     BuildRuleResolver resolver =
         new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer());
-    SourcePathResolver pathResolver = new SourcePathResolver(resolver);
+    SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(resolver);
+    SourcePathResolver pathResolver = new SourcePathResolver(ruleFinder);
 
     final FakeBuildRule fakeBuildRule = new FakeBuildRule("//:fake", pathResolver);
     resolver.addToIndex(fakeBuildRule);
 
-    BuildTargetSourcePath archive1 = new BuildTargetSourcePath(
-        fakeBuildRule.getBuildTarget(),
-        Paths.get("location"));
-    PathSourcePath archive2 = new PathSourcePath(
-        new FakeProjectFilesystem(),
-        Paths.get("otherLocation"));
+    ExplicitBuildTargetSourcePath archive1 =
+        new ExplicitBuildTargetSourcePath(fakeBuildRule.getBuildTarget(), Paths.get("location"));
+    PathSourcePath archive2 =
+        new PathSourcePath(new FakeProjectFilesystem(), Paths.get("otherLocation"));
 
     // Verify that two ArchiveMemberSourcePaths with the same archive and path
     assertEquals(
-        createEmptyRuleKey(
-            pathResolver)
-            .setReflectively(
-                "key",
-                new ArchiveMemberSourcePath(
-                    archive1,
-                    Paths.get("location")))
-            .build(),
-        createEmptyRuleKey(
-            pathResolver)
-            .setReflectively(
-                "key",
-                new ArchiveMemberSourcePath(
-                    archive1,
-                    Paths.get("location")))
-            .build());
+        buildResult(
+            createBuilder(pathResolver, ruleFinder)
+                .setReflectively(
+                    "key", ArchiveMemberSourcePath.of(archive1, Paths.get("location")))),
+        buildResult(
+            createBuilder(pathResolver, ruleFinder)
+                .setReflectively(
+                    "key", ArchiveMemberSourcePath.of(archive1, Paths.get("location")))));
 
     // Verify that just changing the archive changes the rule key
     assertNotEquals(
-        createEmptyRuleKey(
-            pathResolver)
-            .setReflectively(
-                "key",
-                new ArchiveMemberSourcePath(
-                    archive1,
-                    Paths.get("location")))
-            .build(),
-        createEmptyRuleKey(
-            pathResolver)
-            .setReflectively(
-                "key",
-                new ArchiveMemberSourcePath(
-                    archive2,
-                    Paths.get("location")))
-            .build());
+        buildResult(
+            createBuilder(pathResolver, ruleFinder)
+                .setReflectively(
+                    "key", ArchiveMemberSourcePath.of(archive1, Paths.get("location")))),
+        buildResult(
+            createBuilder(pathResolver, ruleFinder)
+                .setReflectively(
+                    "key", ArchiveMemberSourcePath.of(archive2, Paths.get("location")))));
 
     // Verify that just changing the member path changes the rule key
     assertNotEquals(
-        createEmptyRuleKey(
-            pathResolver)
-            .setReflectively(
-                "key",
-                new ArchiveMemberSourcePath(
-                    archive1,
-                    Paths.get("location")))
-            .build(),
-        createEmptyRuleKey(
-            pathResolver)
-            .setReflectively(
-                "key",
-                new ArchiveMemberSourcePath(
-                    archive1,
-                    Paths.get("different")))
-            .build());
+        buildResult(
+            createBuilder(pathResolver, ruleFinder)
+                .setReflectively(
+                    "key", ArchiveMemberSourcePath.of(archive1, Paths.get("location")))),
+        buildResult(
+            createBuilder(pathResolver, ruleFinder)
+                .setReflectively(
+                    "key", ArchiveMemberSourcePath.of(archive1, Paths.get("different")))));
   }
 
   @Test
   public void canAddMapsToRuleKeys() {
-    ImmutableMap<String, ?> map = ImmutableMap.of(
-        "path",
-        new FakeSourcePath("some/path"),
-        "boolean",
-        true);
+    ImmutableMap<String, ?> map =
+        ImmutableMap.of("path", new FakeSourcePath("some/path"), "boolean", true);
 
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
-    RuleKey key = createEmptyRuleKey(resolver).setReflectively("map", map).build();
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = new SourcePathResolver(ruleFinder);
+    RuleKey key =
+        createBuilder(resolver, ruleFinder).setReflectively("map", map).build(RuleKey::new);
 
     assertNotNull(key);
   }
 
   @Test
   public void keysOfMapsAddedToRuleKeysDoNotNeedToBeStrings() {
-    ImmutableMap<?, ?> map = ImmutableMap.of(
-        new FakeSourcePath("some/path"), "woohoo!",
-        42L, "life, the universe and everything");
+    ImmutableMap<?, ?> map =
+        ImmutableMap.of(
+            new FakeSourcePath("some/path"), "woohoo!", 42L, "life, the universe and everything");
 
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = new SourcePathResolver(ruleFinder);
     RuleKey key =
-        createEmptyRuleKey(resolver)
-            .setReflectively("map", map)
-            .build();
+        createBuilder(resolver, ruleFinder).setReflectively("map", map).build(RuleKey::new);
 
     assertNotNull(key);
   }
 
   @Test
   public void canAddRuleKeyAppendable() {
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = new SourcePathResolver(ruleFinder);
     RuleKey key =
-        createEmptyRuleKey(resolver)
+        createBuilder(resolver, ruleFinder)
             .setReflectively("rule_key_appendable", new TestRuleKeyAppendable("foo"))
-            .build();
+            .build(RuleKey::new);
     assertNotNull(key);
   }
 
   @Test
   public void canAddListOfRuleKeyAppendable() {
-    ImmutableList<TestRuleKeyAppendable> list = ImmutableList.of(
-        new TestRuleKeyAppendable("foo"),
-        new TestRuleKeyAppendable("bar"));
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
-    RuleKey key = createEmptyRuleKey(resolver).setReflectively("list", list).build();
+    ImmutableList<TestRuleKeyAppendable> list =
+        ImmutableList.of(new TestRuleKeyAppendable("foo"), new TestRuleKeyAppendable("bar"));
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = new SourcePathResolver(ruleFinder);
+    RuleKey key =
+        createBuilder(resolver, ruleFinder).setReflectively("list", list).build(RuleKey::new);
     assertNotNull(key);
   }
 
   @Test
   public void canAddMapOfRuleKeyAppendable() {
-    ImmutableMap<String, TestRuleKeyAppendable> map = ImmutableMap.of(
-        "foo", new TestRuleKeyAppendable("foo"),
-        "bar", new TestRuleKeyAppendable("bar"));
-    SourcePathResolver resolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-     );
-    RuleKey key = createEmptyRuleKey(resolver).setReflectively("map", map).build();
+    ImmutableMap<String, TestRuleKeyAppendable> map =
+        ImmutableMap.of(
+            "foo", new TestRuleKeyAppendable("foo"),
+            "bar", new TestRuleKeyAppendable("bar"));
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver resolver = new SourcePathResolver(ruleFinder);
+    RuleKey key =
+        createBuilder(resolver, ruleFinder).setReflectively("map", map).build(RuleKey::new);
     assertNotNull(key);
   }
 
@@ -659,27 +575,24 @@ public class RuleKeyTest {
   public void changingRuleKeyFieldChangesKeyWhenClassImplementsAppendToRuleKey() {
     BuildTarget target = BuildTargetFactory.newInstance("//cheese:peas");
     BuildRuleParams params = new FakeBuildRuleParamsBuilder(target).build();
-    SourcePathResolver pathResolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-    );
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver pathResolver = new SourcePathResolver(ruleFinder);
     FileHashCache hashCache =
-        DefaultFileHashCache.createDefaultFileHashCache(new FakeProjectFilesystem());
+        new StackedFileHashCache(
+            ImmutableList.of(
+                DefaultFileHashCache.createDefaultFileHashCache(
+                    new FakeProjectFilesystem(), false)));
 
-    BuildRule buildRule1 = new TestRuleKeyAppendableBuildRule(
-        params,
-        pathResolver,
-        "foo",
-        "bar");
-    BuildRule buildRule2 = new TestRuleKeyAppendableBuildRule(
-        params,
-        pathResolver,
-        "foo",
-        "xyzzy");
+    BuildRule buildRule1 = new TestRuleKeyAppendableBuildRule(params, "foo", "bar");
+    BuildRule buildRule2 = new TestRuleKeyAppendableBuildRule(params, "foo", "xyzzy");
 
     RuleKey ruleKey1 =
-        new DefaultRuleKeyFactory(0, hashCache, pathResolver).build(buildRule1);
+        new DefaultRuleKeyFactory(0, hashCache, pathResolver, ruleFinder).build(buildRule1);
     RuleKey ruleKey2 =
-        new DefaultRuleKeyFactory(0, hashCache, pathResolver).build(buildRule2);
+        new DefaultRuleKeyFactory(0, hashCache, pathResolver, ruleFinder).build(buildRule2);
 
     assertNotEquals(ruleKey1, ruleKey2);
   }
@@ -688,38 +601,37 @@ public class RuleKeyTest {
   public void changingRuleKeyFieldOfDepChangesKeyWhenClassImplementsAppendToRuleKey() {
     BuildTarget target = BuildTargetFactory.newInstance("//cheese:peas");
     BuildRuleParams params = new FakeBuildRuleParamsBuilder(target).build();
-    SourcePathResolver pathResolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-    );
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver pathResolver = new SourcePathResolver(ruleFinder);
     FileHashCache hashCache =
-        DefaultFileHashCache.createDefaultFileHashCache(new FakeProjectFilesystem());
+        new StackedFileHashCache(
+            ImmutableList.of(
+                DefaultFileHashCache.createDefaultFileHashCache(
+                    new FakeProjectFilesystem(), false)));
 
-    BuildRule buildRule1 = new TestRuleKeyAppendableBuildRule(
-        params,
-        pathResolver,
-        "foo",
-        "bar");
-    BuildRule buildRule2 = new TestRuleKeyAppendableBuildRule(
-        params,
-        pathResolver,
-        "foo",
-        "xyzzy");
+    BuildRule buildRule1 = new TestRuleKeyAppendableBuildRule(params, "foo", "bar");
+    BuildRule buildRule2 = new TestRuleKeyAppendableBuildRule(params, "foo", "xyzzy");
 
     BuildTarget parentTarget = BuildTargetFactory.newInstance("//cheese:milk");
 
-    BuildRuleParams parentParams1 = new FakeBuildRuleParamsBuilder(parentTarget)
-        .setDeclaredDeps(ImmutableSortedSet.of(buildRule1))
-        .build();
-    BuildRule parentRule1 = new NoopBuildRule(parentParams1, pathResolver);
-    BuildRuleParams parentParams2 = new FakeBuildRuleParamsBuilder(parentTarget)
-        .setDeclaredDeps(ImmutableSortedSet.of(buildRule2))
-        .build();
-    BuildRule parentRule2 = new NoopBuildRule(parentParams2, pathResolver);
+    BuildRuleParams parentParams1 =
+        new FakeBuildRuleParamsBuilder(parentTarget)
+            .setDeclaredDeps(ImmutableSortedSet.of(buildRule1))
+            .build();
+    BuildRule parentRule1 = new NoopBuildRule(parentParams1);
+    BuildRuleParams parentParams2 =
+        new FakeBuildRuleParamsBuilder(parentTarget)
+            .setDeclaredDeps(ImmutableSortedSet.of(buildRule2))
+            .build();
+    BuildRule parentRule2 = new NoopBuildRule(parentParams2);
 
-    RuleKey ruleKey1 = new DefaultRuleKeyFactory(0, hashCache, pathResolver).build(
-        parentRule1);
-    RuleKey ruleKey2 = new DefaultRuleKeyFactory(0, hashCache, pathResolver).build(
-        parentRule2);
+    RuleKey ruleKey1 =
+        new DefaultRuleKeyFactory(0, hashCache, pathResolver, ruleFinder).build(parentRule1);
+    RuleKey ruleKey2 =
+        new DefaultRuleKeyFactory(0, hashCache, pathResolver, ruleFinder).build(parentRule2);
 
     assertNotEquals(ruleKey1, ruleKey2);
   }
@@ -729,10 +641,11 @@ public class RuleKeyTest {
     class NoopSetterRuleKeyBuilder extends UncachedRuleKeyBuilder {
 
       public NoopSetterRuleKeyBuilder(
+          SourcePathRuleFinder ruleFinder,
           SourcePathResolver pathResolver,
           FileHashCache hashCache,
           RuleKeyFactory<RuleKey> defaultRuleKeyFactory) {
-        super(pathResolver, hashCache, defaultRuleKeyFactory);
+        super(ruleFinder, pathResolver, hashCache, defaultRuleKeyFactory);
       }
 
       @Override
@@ -741,71 +654,63 @@ public class RuleKeyTest {
       }
     }
 
-    SourcePathResolver pathResolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-    );
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver pathResolver = new SourcePathResolver(ruleFinder);
     FileHashCache hashCache = new FakeFileHashCache(ImmutableMap.of());
-    RuleKeyFactory<RuleKey> ruleKeyFactory = new DefaultRuleKeyFactory(
-        0,
-        hashCache,
-        pathResolver);
+    RuleKeyFactory<RuleKey> ruleKeyFactory =
+        new DefaultRuleKeyFactory(0, hashCache, pathResolver, ruleFinder);
 
     RuleKey nullRuleKey =
-        new NoopSetterRuleKeyBuilder(pathResolver, hashCache, ruleKeyFactory)
-            .build();
+        new NoopSetterRuleKeyBuilder(ruleFinder, pathResolver, hashCache, ruleKeyFactory)
+            .build(RuleKey::new);
     RuleKey noopRuleKey =
-        new NoopSetterRuleKeyBuilder(pathResolver, hashCache, ruleKeyFactory)
+        new NoopSetterRuleKeyBuilder(ruleFinder, pathResolver, hashCache, ruleKeyFactory)
             .setReflectively("key", new FakeSourcePath("value"))
-            .build();
+            .build(RuleKey::new);
 
     assertThat(noopRuleKey, is(equalTo(nullRuleKey)));
   }
 
   @Test
   public void declaredDepsAndExtraDepsGenerateDifferentRuleKeys() {
-    SourcePathResolver sourcePathResolver = new SourcePathResolver(
-        new BuildRuleResolver(TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer())
-    );
+    SourcePathRuleFinder ruleFinder =
+        new SourcePathRuleFinder(
+            new BuildRuleResolver(
+                TargetGraph.EMPTY, new DefaultTargetNodeToBuildRuleTransformer()));
+    SourcePathResolver sourcePathResolver = new SourcePathResolver(ruleFinder);
     FileHashCache hashCache = new FakeFileHashCache(ImmutableMap.of());
-    DefaultRuleKeyFactory ruleKeyFactory = new DefaultRuleKeyFactory(
-        0,
-        hashCache,
-        sourcePathResolver);
+    DefaultRuleKeyFactory ruleKeyFactory =
+        new DefaultRuleKeyFactory(0, hashCache, sourcePathResolver, ruleFinder);
 
     BuildTarget target = BuildTargetFactory.newInstance("//a:target");
 
     BuildTarget depTarget = BuildTargetFactory.newInstance("//some:dep");
     BuildRuleParams depParams = new FakeBuildRuleParamsBuilder(depTarget).build();
-    NoopBuildRule dep = new NoopBuildRule(depParams, sourcePathResolver);
+    NoopBuildRule dep = new NoopBuildRule(depParams);
 
-    BuildRuleParams paramsWithDeclaredDep = new FakeBuildRuleParamsBuilder(target)
-        .setDeclaredDeps(ImmutableSortedSet.of(dep))
-        .build();
-    NoopBuildRule ruleWithDeclaredDep =
-        new NoopBuildRule(paramsWithDeclaredDep, sourcePathResolver);
+    BuildRuleParams paramsWithDeclaredDep =
+        new FakeBuildRuleParamsBuilder(target).setDeclaredDeps(ImmutableSortedSet.of(dep)).build();
+    NoopBuildRule ruleWithDeclaredDep = new NoopBuildRule(paramsWithDeclaredDep);
 
-    BuildRuleParams paramsWithExtraDep = new FakeBuildRuleParamsBuilder(target)
-        .setExtraDeps(ImmutableSortedSet.of(dep))
-        .build();
-    NoopBuildRule ruleWithExtraDep =
-        new NoopBuildRule(paramsWithExtraDep, sourcePathResolver);
+    BuildRuleParams paramsWithExtraDep =
+        new FakeBuildRuleParamsBuilder(target).setExtraDeps(ImmutableSortedSet.of(dep)).build();
+    NoopBuildRule ruleWithExtraDep = new NoopBuildRule(paramsWithExtraDep);
 
-    BuildRuleParams paramsWithBothDeps = new FakeBuildRuleParamsBuilder(target)
-        .setDeclaredDeps(ImmutableSortedSet.of(dep))
-        .setExtraDeps(ImmutableSortedSet.of(dep))
-        .build();
-    NoopBuildRule ruleWithBothDeps =
-        new NoopBuildRule(paramsWithBothDeps, sourcePathResolver);
+    BuildRuleParams paramsWithBothDeps =
+        new FakeBuildRuleParamsBuilder(target)
+            .setDeclaredDeps(ImmutableSortedSet.of(dep))
+            .setExtraDeps(ImmutableSortedSet.of(dep))
+            .build();
+    NoopBuildRule ruleWithBothDeps = new NoopBuildRule(paramsWithBothDeps);
 
     assertNotEquals(
-        ruleKeyFactory.build(ruleWithDeclaredDep),
-        ruleKeyFactory.build(ruleWithExtraDep));
+        ruleKeyFactory.build(ruleWithDeclaredDep), ruleKeyFactory.build(ruleWithExtraDep));
     assertNotEquals(
-        ruleKeyFactory.build(ruleWithDeclaredDep),
-        ruleKeyFactory.build(ruleWithBothDeps));
-    assertNotEquals(
-        ruleKeyFactory.build(ruleWithExtraDep),
-        ruleKeyFactory.build(ruleWithBothDeps));
+        ruleKeyFactory.build(ruleWithDeclaredDep), ruleKeyFactory.build(ruleWithBothDeps));
+    assertNotEquals(ruleKeyFactory.build(ruleWithExtraDep), ruleKeyFactory.build(ruleWithBothDeps));
   }
 
   private static class TestRuleKeyAppendable implements RuleKeyAppendable {
@@ -817,58 +722,41 @@ public class RuleKeyTest {
 
     @Override
     public void appendToRuleKey(RuleKeyObjectSink sink) {
-      sink
-          .setReflectively("value", value)
+      sink.setReflectively("value", value)
           .setReflectively("foo", "foo")
           .setReflectively("bar", "bar");
     }
   }
 
-  private static class TestRuleKeyAppendableBuildRule extends NoopBuildRule
-      implements RuleKeyAppendable {
+  private static class TestRuleKeyAppendableBuildRule extends NoopBuildRule {
     private final String foo;
 
     @SuppressWarnings("PMD.UnusedPrivateField")
     @AddToRuleKey
     private final String bar;
 
-    public TestRuleKeyAppendableBuildRule(
-        BuildRuleParams buildRuleParams,
-        SourcePathResolver sourcePathResolver,
-        String foo,
-        String bar) {
-      super(buildRuleParams, sourcePathResolver);
+    public TestRuleKeyAppendableBuildRule(BuildRuleParams buildRuleParams, String foo, String bar) {
+      super(buildRuleParams);
       this.foo = foo;
       this.bar = bar;
     }
 
     @Override
     public void appendToRuleKey(RuleKeyObjectSink sink) {
-      sink
-          .setReflectively("foo", foo);
+      sink.setReflectively("foo", foo);
     }
   }
 
-  private RuleKeyBuilder<RuleKey> createEmptyRuleKey(SourcePathResolver resolver) {
+  private DefaultRuleKeyFactory.Builder<HashCode> createBuilder(
+      SourcePathResolver resolver, SourcePathRuleFinder ruleFinder) {
     FileHashCache fileHashCache =
         new FileHashCache() {
-          @Override
-          public boolean willGet(Path path) {
-            return true;
-          }
 
           @Override
-          public boolean willGet(ArchiveMemberPath archiveMemberPath) {
-            return true;
-          }
+          public void invalidate(Path path) {}
 
           @Override
-          public void invalidate(Path path) {
-          }
-
-          @Override
-          public void invalidateAll() {
-          }
+          public void invalidateAll() {}
 
           @Override
           public HashCode get(Path path) {
@@ -886,11 +774,15 @@ public class RuleKeyTest {
           }
 
           @Override
-          public void set(Path path, HashCode hashCode) {
-          }
+          public void set(Path path, HashCode hashCode) {}
         };
     BuildTarget buildTarget = BuildTargetFactory.newInstance("//some:example");
     BuildRule buildRule = new FakeBuildRule(buildTarget, resolver);
-    return new DefaultRuleKeyFactory(0, fileHashCache, resolver).newInstance(buildRule);
+    return new DefaultRuleKeyFactory(0, fileHashCache, resolver, ruleFinder)
+        .newBuilderForTesting(buildRule);
+  }
+
+  private RuleKeyResult<RuleKey> buildResult(RuleKeyBuilder<HashCode> builder) {
+    return ((DefaultRuleKeyFactory.Builder<HashCode>) builder).buildResult(RuleKey::new);
   }
 }
